--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -26,17 +26,17 @@
     padding: 20px;
 }
 
-/* Search Component */
+/* Search bar */
 .search-bar {
     width: 100%;
     max-width: 400px;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 5px 10px;
+    margin: 0 auto 10px;
 }
 
 .search-bar input {
@@ -47,7 +47,6 @@
     font-size: 16px;
     background-color: #ffffff;
     transition: background-color 0.3s ease-in-out;
-    margin-bottom: 5px;
 }
 
 .search-bar input:focus {
@@ -55,16 +54,16 @@
     background-color: #ffffff;
 }
 
-/* Product Display */
-.product-list {
+/* Product display */
+.item-list {
     flex: 2;
     display: flex;
     gap: 20px;
 }
 
-.product {
-    background-color: rgb(255, 245, 245);
-    border: 1px solid #1b4e1f;
+.item {
+    background-color: rgb(222, 222, 222);
+    border: 1px solid #1b2b4e;
     border-radius: 10%;
     padding: 10px 60px;
     text-align: center;
@@ -75,51 +74,50 @@
     position: relative;
 }
 
-.product:hover {
+.item:hover {
     transform: translateY(-5px) scale(1.03);
 }
 
-.product img {
+.item img {
     max-width: 150px;
-    /* Increased image size */
+
     height: auto;
     margin-bottom: 10px;
     border-radius: 50%;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-    /* Enhanced box shadow */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    /* Added box shadow transition */
+
 }
 
-.product:hover img {
+.item:hover img {
     transform: scale(1.1);
     z-index: 1;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
-    /* Enhanced box shadow on hover */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-.product h2 {
+.item h2 {
     font-size: 1.5rem;
     margin: 10px 0;
     color: #323754;
 }
 
-.product p {
+.item p {
     font-size: 1.1rem;
     color: #777;
     margin: 5px 0;
 }
 
-/* Cart Checkout */
+/* Cart */
 .cart {
     flex: 1;
     min-width: 300px;
     margin-top: 3%;
-    background-color: #fff9e6;
-    border: 2px solid #193d10;
+    background-color: #e6f3ff;
+    border: 2px solid #101d3d;
     border-radius: 20px;
     padding: 10px 20px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     display: none;
     position: sticky;
     top: 20px;
@@ -157,7 +155,7 @@
     height: auto;
     margin-right: 20px;
     border-radius: 50%;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
 }
 
@@ -190,7 +188,7 @@
 }
 
 .cart-item .item-actions button {
-    background-color: #6cc24a;
+    background-color: #4a62c2;
     border: none;
     color: white;
     padding: 8px 15px;
@@ -202,7 +200,7 @@
 }
 
 .cart-item .item-actions button:hover {
-    background-color: #449e30;
+    background-color: #304f9e;
 }
 
 .cart-item .quantity {
@@ -221,7 +219,7 @@
 }
 
 .cart .checkout-button {
-    background-color: #6cc24a;
+    background-color: #4a62c2;
     border: none;
     color: white;
     padding: 10px 15px;
@@ -233,13 +231,13 @@
 }
 
 .cart .checkout-button:hover {
-    background-color: #449e30;
+    background-color: #304f9e;
 }
 
 .checkout-message {
     font-size: 1.4rem;
     margin-top: 30px;
-    color: #6cc24a;
+    color: #4a62c2;
     text-align: center;
 }
 
@@ -273,7 +271,7 @@
 }
 
 .add-to-cart-button {
-    background-color: #6cc24a;
+    background-color: #4a62c2;
     border: none;
     color: white;
     padding: 8px 15px;
@@ -284,7 +282,7 @@
 }
 
 .add-to-cart-button:hover {
-    background-color: #449e30;
+    background-color: #304f9e;
 }
 
 .item-info {
@@ -302,7 +300,7 @@
 
 .product-list {
     padding-bottom: 5%;
-    border-bottom: 2px solid green;
+    border-bottom: 2px solid darkblue;
 }
 
 .checkout-section {
